Atualização da api
